<resources>
    <string name="app_name">FraudBuster</string>
    <string name="disclaimer">Disclaimer</string>
    <string name="disclaimer_content">
        By Clicking Continue you agree to the following:\n
        - This application will record your phone calls\n
        - This application might send phone call recordings to 3rd Parties such as (but not limited to) Google for processing\n
        - These 3rd parties might store your calls\n
        - There is no guarantee that every fraudulent call will be detected\n
        ** If you click Cancel the application will terminate
    </string>
    <string name="use_at_own_risk">USE AT YOUR OWN RISK</string>
    <string name="agree">Continue</string>
    <string name="disagree">Cancel</string>
    <string name="dont_ask_again">Remeber, Don\'t ask me again</string>
    <string name="UserPreferences">appPrefs</string>
    <string name="rememberKey">rK</string>
    <string name="service_started_success">The Buster Service started successfully</string>
    <string name="how_it_works">How it Works</string>
    <string name="how_it_works_desc">
        The application will run in the background and record your phone calls
        and then run some analysis on the recording to figure out if the call was fraudulent
        or not.
    </string>
    <string name="what_todo">What To Do</string>
    <string name="what_todo_desc">
        Watch out for notifications after your call ends (might take a couple of seconds).\n
        The notification should tell you whether the call was fraudulent or not.
    </string>
</resources>
